<resources>
    <!-- Title -->
    <string name="app_name">Call CC</string>

    <!-- main -->
    <string name="onboarding_start">"소리를 📢\n     글자로 듣다 👁"</string>
    <string name="onboarding_btn">시작하기</string>

    <!-- register1 -->
    <string name="register1_title">시작할 방법을\n선택해 주세요!</string>
    <string name="register1_anony">익명으로 하기</string>
    <string name="register1_true">회원가입 하기</string>

    <!-- register2 -->
    <string name="backArrow">뒤로가기 버튼</string>
    <string name="inputProfile">프로필 입력</string>
    <string name="settingImage">이미지 변경</string>
    <string name="settingName">이름</string>
    <string name="settingMessage">소개 메세지</string>
    <string name="editTextClear">입력 초기화</string>
    <string name="publicActive">활성화</string>
    <string name="publicDeactive">비활성화</string>

    <!-- call -->
    <string name="callBtn">통화</string>
    <string name="callLogBtn">통화 기록</string>
    <string name="addressBookBtn">연락처</string>
    <string name="profileBtn">프로필</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="star">*</string>
    <string name="zero">0</string>
    <string name="sharp">#</string>
</resources>