<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/backArrow"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/nexon_gothic_bold"
        android:text="@string/inputProfile"
        android:textColor="#3b3b3b"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="168dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/settingImage"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anony_user" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="308dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="380dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/settingName"
        android:autofillHints="@null"
        android:textColorHint="@color/deActivate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="308dp"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="460dp"
        android:ems="10"
        android:hint="@string/settingMessage"
        android:autofillHints="@null"
        android:inputType="text"
        android:textColorHint="@color/deActivate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/selector"
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="568dp"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="308dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="568dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/publicBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@drawable/rounded_btn"
            android:fontFamily="@font/nexon_gothic_bold"
            android:text="Left"
            android:textColor="#3b3b3b"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/privateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:background="@drawable/rounded_btn_gray_true"
            android:fontFamily="@font/nexon_gothic_bold"
            android:text="Right"
            android:textColor="#3b3b3b"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>