<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity1"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/nexon_gothic_bold"
        android:text="@string/register1_title"
        android:textColor="#3b3b3b"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/just_line"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="212dp"
        android:background="#3b3b3b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register_btn_anony"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn_gray_true"
        android:fontFamily="@font/nexon_gothic_bold"
        android:text="@string/register1_anony"
        android:textColor="#3b3b3b"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

    <Button
        android:id="@+id/register_btn_true"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_btn"
        android:fontFamily="@font/nexon_gothic_bold"
        android:text="@string/register1_true"
        android:textColor="#3b3b3b"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.863" />

</androidx.constraintlayout.widget.ConstraintLayout>